<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.Subcategory">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorprimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="lollipop">


    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/category_img"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:contentDescription="@string/imagecontent"
        android:scaleType="fitXY"
        android:src="@drawable/salonbanner"
        android:layout_below="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"></ImageView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/activity_margin"
        android:layout_marginRight="@dimen/activity_margin"
        android:layout_marginTop="270dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/activity_margin">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aquawaxblack"
                android:text="@string/selectwhatyouneed"
                android:textColor="@color/text_black_color"
                android:textSize="@dimen/text_title_size"
                android:textStyle="bold"></TextView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/subcatrec"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/activity_margin"></androidx.recyclerview.widget.RecyclerView>

            <TextView
                android:id="@+id/nosubcategory"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/nosubcategory"
                android:textColor="@color/text_black_color"
                android:textSize="@dimen/text_subtitle_size"
                android:visibility="gone"></TextView>


        </LinearLayout>

    </androidx.cardview.widget.CardView>


</RelativeLayout>