<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.Subcategory_details">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorprimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="lollipop">


    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/subcategoryimg"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:contentDescription="@string/imagecontent"
        android:scaleType="fitXY"
        android:src="@drawable/salonbanner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"></ImageView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_margin"
        app:layout_constraintTop_toBottomOf="@+id/subcategoryimg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aquawaxblack"
            android:text="@string/selectwhatyouneed"
            android:textColor="@color/text_black_color"
            android:textSize="@dimen/text_title_size"
            android:textStyle="bold"
            android:id="@+id/sub_cat_name"></TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aquawaxmedium"
            android:text="@string/selectwhatyouneed"
            android:textColor="@color/text_black_color"
            android:textSize="@dimen/text_paragraph_size"
            android:id="@+id/sub_cat_desc"
            android:layout_marginTop="5dp"></TextView>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@color/rec_divider"></View>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/duration"
                android:fontFamily="@font/aquawaxmedium"
                android:textColor="@color/text_black_color"
                android:textSize="@dimen/text_subtitle_size"
                ></TextView>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/duration"
                android:textColor="@color/text_black_color"
                android:textSize="@dimen/text_subtitle_size"
                android:id="@+id/duration"></TextView>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@color/rec_divider"></View>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/turnaroundtime"
                android:fontFamily="@font/aquawaxmedium"
                android:textColor="@color/text_black_color"
                android:textSize="@dimen/text_subtitle_size"
                ></TextView>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/turnaroundtime"
                android:textColor="@color/text_black_color"
                android:textSize="@dimen/text_subtitle_size"
                android:id="@+id/turnaroundtime"></TextView>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@color/rec_divider"></View>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/pricing"
                android:fontFamily="@font/aquawaxmedium"
                android:textColor="@color/text_black_color"
                android:textSize="@dimen/text_subtitle_size"
                ></TextView>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:text="@string/pricing"
                android:textColor="@color/text_grey_color"
                android:textSize="@dimen/text_subtitle_size"
                android:id="@+id/pricing"></TextView>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:text="@string/pricing"
                android:textColor="@color/text_black_color"
                android:textSize="@dimen/text_subtitle_size"
                android:id="@+id/discountprice"></TextView>


        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aquawaxmedium"
            android:text="@string/selectwhatyouneed"
            android:id="@+id/includedtxt"
            android:layout_marginTop="5dp"
            android:textColor="@color/text_black_color"
            android:textSize="@dimen/text_paragraph_size"></TextView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/includedetaillayout"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

        </LinearLayout>
    </LinearLayout>
    <android.widget.Button
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:background="@drawable/button_background"
        android:text="@string/booking_btn"
        android:fontFamily="@font/aquawaxmedium"
        android:textColor="@color/text_black_color"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginRight="@dimen/activity_margin"
        android:id="@+id/book_now"
        android:layout_marginBottom="@dimen/activity_margin"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/activity_margin"></android.widget.Button>


</androidx.constraintlayout.widget.ConstraintLayout>